<resources>
    <string name="app_name">HokieFit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stopwatchMode">Stopwatch Mode</string>
    <string name="timerTitle">Workout Timer</string>
    <string name="sets">Sets</string>
    <string name="work">Work</string>
    <string name="rest">Rest</string>
    <string name="defaultSets">4</string>
    <string name="defaultWorkMin">10</string>
    <string name="defaultWorkSec">00</string>
    <string name="defaultRestSec">30</string>
    <string name="defaultRestMin">00</string>
    <string name="colon">:</string>
    <string name="start">Start</string>
    <string name="presets">Presets</string>
    <string name="addPreset">Add Preset</string>
    <string name="customPreset">Custom Preset</string>
    <string name="defaultTime">00:00</string>
    <string name="reset">Rest</string>
    <string name="end">End Workout</string>
    <string name="stop">Stop</string>
    <string name="endRest">End Rest</string>
    <string name="pause">Pause</string>


    <string name="fitnessButtonText">Fitness</string>
    <string name="nutritionButtonText">Nutrition</string>

    <string name="userNameText">James Bond</string>
    <string name="carbsText">Carbs</string>
    <string name="proteinText">Protein</string>
    <string name="fatsText">Fats</string>

    <string name="breakfastButtonText">Breakfast</string>
    <string name="lunchButtonText">Lunch</string>
    <string name="dinnerButtonText">Dinner</string>
    <string name="otherMealButtonText">Other Meal</string>

    <string name="stepCounterText">Steps Taken</string>

    <string name="mainRemainingCalText">Calories Remaining</string>
    <string name="settingsDesc">Navigates to settings</string>

    <string name="str_resetPdm">Reset</string>

    <string name="str_backtoMain">To Main Menu</string>

    <string-array name="diningMenu">
        <item>Hamburger</item>
        <item>Cheeseburger</item>
        <item>Caesar Salad</item>
        <item>French Fries</item>
        <item>Chicken Nugget</item>
    </string-array>

    <string-array name="description">
        <item>Random Description</item>
        <item>Random Description</item>
        <item>Random Description</item>
        <item>Random Description</item>
        <item>Random Description</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">James Bond</string>
    <string name="profile">Profile</string>
    <string name="my_goal">My Goal</string>
    <string name="settings">Settings</string>
    <string name="my_goals">My Goals</string>
    <string name="activity_log">Activity Log</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="nutrition">Nutrition</string>
    <string name="fitness">Fitness</string>
    <string name="add_item">Add Item</string>
    <string name="enter_a_new_goal_press_and_hold_to_delete">Enter a new goal (press and hold to delete)</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="gender">Gender:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="enter_your_gender">Enter your gender</string>
    <string name="enter_your_date_of_birth">Enter your date of birth</string>
    <string name="enter_your_height">Enter your height in inches</string>
    <string name="enter_your_weight_in_lbs">Enter your weight in lbs</string>
    <string name="enter_your_name">Enter your name</string>
</resources>