<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/profile_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:gravity="center|start"
        android:padding="20dp"
        android:drawablePadding="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/profile"
        android:inputType="text"
        android:hint="@string/enter_your_name"
        android:autofillHints="" />

    <TextView
        android:id="@+id/gender_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/profile_user_name"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/gender_et"
        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender_title"
        android:autofillHints=""
        android:hint="@string/enter_your_gender"
        android:inputType="text"
        android:labelFor="@id/gender_title"/>

    <TextView
        android:id="@+id/dob_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        android:layout_below="@id/gender_et"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/dob_et"
        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dob_title"
        android:autofillHints=""
        android:hint="@string/enter_your_date_of_birth"
        android:inputType="text"
        android:labelFor="@id/dob_title"/>

    <TextView
        android:id="@+id/height_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:layout_below="@id/dob_et"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/height_et"
        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/height_title"
        android:autofillHints=""
        android:hint="@string/enter_your_height"
        android:inputType="number"
        android:labelFor="@id/weight_title"/>

    <TextView
        android:id="@+id/weight_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/height_et"
        android:text="@string/weight"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/weight_et"
        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_title"
        android:autofillHints=""
        android:hint="@string/enter_your_weight_in_lbs"
        android:inputType="number"
        android:labelFor="@id/weight_title"/>


</RelativeLayout>