<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maroon"
    tools:context=".StopwatchFragment">

    <Button
        android:id="@+id/restMinus2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_minimize_24"
        app:layout_constraintEnd_toStartOf="@+id/restMin2"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/restPlus2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="94dp"
        android:background="@drawable/ic_baseline_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/restSec2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/rest"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/restMinus2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/restMin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="5dp"
        android:inputType="number"
        android:text="@string/defaultRestMin"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/restMinus2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/restSec2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="2dp"
        android:inputType="number"
        android:text="@string/defaultRestSec"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/restPlus2"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:text="@string/colon"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/restSec2"
        app:layout_constraintStart_toEndOf="@+id/restMin2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stopwatchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/defaultTime"
        android:textColor="@color/white"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <Button
        android:id="@+id/stopwatchStart"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="5dp"
        android:text="@string/start"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/stopwatchRest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopwatchText" />

    <Button
        android:id="@+id/stopwatchRest"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="5dp"
        android:text="@string/reset"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/stopwatchEnd"
        app:layout_constraintStart_toEndOf="@+id/stopwatchStart"
        app:layout_constraintTop_toBottomOf="@+id/stopwatchText" />

    <Button
        android:id="@+id/stopwatchEnd"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:text="@string/end"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stopwatchRest"
        app:layout_constraintTop_toBottomOf="@+id/stopwatchText" />
</androidx.constraintlayout.widget.ConstraintLayout>